improve a bit
